--- a/about.html
+++ b/about.html
@@ -44,10 +44,10 @@
     </tr>
     <tr>
         <td height="600"></td>
-        <td valign="top" width="800">
+        <td valign="top">
            <h1 align="center">About Us</h1>
            <p align="justify">
-My name is Al Amin, and I am a dedicated Computer Science Engineering student with a focus on web development. I have a strong passion for creating engaging and user-friendly websites. Currently, I am honing my skills in HTML, CSS, and JavaScript, which allow me to bring my design ideas to life. <br />
+My name is <b>Al Amin</b> and I am a dedicated Computer Science Engineering student with a focus on web development. I have a strong passion for creating engaging and user-friendly websites. Currently, I am honing my skills in HTML, CSS, and JavaScript, which allow me to bring my design ideas to life. <br />
 
 Throughout my academic journey, I have gained a solid understanding of programming concepts and algorithms, as well as a keen eye for detail in creating visually appealing websites. I enjoy working on challenging projects that require problem-solving and creative thinking. <br />
 
